# python-redis-om

./: LICENSE  README.md  pyproject.toml
app/: main.py
app/services/: query_service.py
